--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Special announcement</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">36 minutes ago</div>
+                        <div class="date">47 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Gold technical analysis in 5 minutes....</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -409,7 +409,7 @@
                     <div class="video-info">
                         <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Special announcement</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">36 minutes ago</div>
+                            <div class="date">47 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Gold technical analysis in 5 minutes....</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN VS WORLD'S  MOST IMPOSSIBLE QUIZ</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
